// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test with arrays 1`] = `
<div>
  <div>
    [{"key0":"value0"},{"key1":"value1"},{"key2":"value2"}]
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      value1
    </button>
  </div>
</div>
`;

exports[`Test with arrays 2`] = `
<div>
  <div>
    [{"key0":"value0"},{"key1":"value1-new"},{"key2":"value2"}]
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      value1-new
    </button>
  </div>
</div>
`;

exports[`Test with objects 1`] = `
<div>
  <div>
    {"nested":0}
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      0
    </button>
  </div>
</div>
`;

exports[`Test with objects 2`] = `
<div>
  <div>
    {"nested":1}
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;

exports[`Test with strings 1`] = `
<div>
  <div>
    "value"
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      a
    </button>
  </div>
</div>
`;

exports[`Test with strings 2`] = `
<div>
  <div>
    [null,"test"]
  </div>
  <div>
    <button
      id="button"
      type="button"
    >
      test
    </button>
  </div>
</div>
`;
